--- a/src/App.css
+++ b/src/App.css
@@ -69,7 +69,7 @@
   width: 100%;
   display: flex;
   align-items: center;
-  min-height: 40px;
+  height: 40px;
 }
 
 .submit{
@@ -103,7 +103,11 @@
   background-color: #FFF9C4;
   font-size: 16px;
   font-weight: 600;
+  word-break: break-word;
+  white-space: normal;
 }
+
+
 /*This section is for the side bar and menu*/
 .menu{
   height: 6%;
@@ -180,6 +184,7 @@ ul{
 }
 
 li {
+  
   width: 100%;
   margin-left: 1px;
   margin-bottom: 10px;
@@ -210,7 +215,6 @@ input[type="checkbox"] {
   font-size: 16px;
   font-weight: 500;
   position: relative;
-  width: 70%;                  /* Take remaining width */
   word-break: break-word;
   white-space: normal;
   width: 90%;
@@ -221,17 +225,7 @@ input[type="checkbox"]:checked ~ .tasktext{
   text-decoration: line-through;
 }
 
-.tripledots{
-  height: 20px;
-  width: 20px;
-  margin-left: 5%;
-  opacity: 0;
-  border: none;
-  border-radius: 10px;
-  padding: 1%;
-  margin-right: 1%;
-  transition: opacity 0.5s ease-in-out;
-}
+
 
 .taskform{
   max-width: 82%;
@@ -241,8 +235,7 @@ input[type="checkbox"]:checked ~ .tasktext{
   padding: 5px;
   border: none;
   border-radius: 5px;
-  transition: transform 0.5s ease-in-out;
-  
+  transition: transform 0.3s ease-in-out;
 }
 
 .taskform:hover{
@@ -250,13 +243,43 @@ input[type="checkbox"]:checked ~ .tasktext{
   transform: scale(1.03);
 }
 
+/* Triple dots menu */
+.tripledots:hover{
+  background-color: #ffffff;
+}
+
 .taskform:hover .tripledots{
   opacity: 1;
 }
 
-.tripledots:hover{
-  background-color: #ffffff;
+.tripledots{
+  position: relative;
+  height: 20px;
+  width: 20px;
+  margin-left: 5%;
+  opacity: 0;
+  border: none;
+  border-radius: 10px;
+  padding: 1%;
+  margin-right: 1%;
+  transition: background-color 0.2s ease-in-out;
 }
+
+.tdmenu {
+  position: absolute;
+  background-color: white;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  padding: 5px 0;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+  z-index: 5000;
+  top: 100%;               /* appear below the button */
+              /* adjust to align with the tripledots */
+  width: 100px;
+  list-style: none;
+  animation: fadeIn 0.2s ease;
+}
+
 
 li:has(input[type="checkbox"]:checked) .tasktext {
   text-decoration: line-through;
