--- a/src/App.css
+++ b/src/App.css
@@ -67,7 +67,8 @@
   left: 0;
   top: 10%;
   width: 100px;
-  height: 100%;
+  height: 90%;
+  bottom: 10%;
   transform: translateX(-100px);
   transition: transform 0.3s ease, opacity 0.2s ease;
   z-index: 1000;
